@@ -706,11 +706,17 @@ initpycurl(void)
     insint_c(d, "E_UNSUPPORTED_PROTOCOL", CURLE_UNSUPPORTED_PROTOCOL);
     insint_c(d, "E_FAILED_INIT", CURLE_FAILED_INIT);
     insint_c(d, "E_URL_MALFORMAT", CURLE_URL_MALFORMAT);
+#ifdef HAVE_CURL_7_21_5
+    insint_c(d, "E_NOT_BUILT_IN", CURLE_NOT_BUILT_IN);
+#endif
     insint_c(d, "E_COULDNT_RESOLVE_PROXY", CURLE_COULDNT_RESOLVE_PROXY);
     insint_c(d, "E_COULDNT_RESOLVE_HOST", CURLE_COULDNT_RESOLVE_HOST);
     insint_c(d, "E_COULDNT_CONNECT", CURLE_COULDNT_CONNECT);
     insint_c(d, "E_FTP_WEIRD_SERVER_REPLY", CURLE_FTP_WEIRD_SERVER_REPLY);
     insint_c(d, "E_FTP_ACCESS_DENIED", CURLE_FTP_ACCESS_DENIED);
+#ifdef HAVE_CURL_7_24_0
+    insint_c(d, "E_FTP_ACCEPT_FAILED", CURLE_FTP_ACCEPT_FAILED);
+#endif
     insint_c(d, "E_FTP_WEIRD_PASS_REPLY", CURLE_FTP_WEIRD_PASS_REPLY);
     insint_c(d, "E_FTP_WEIRD_USER_REPLY", CURLE_FTP_WEIRD_USER_REPLY);
     insint_c(d, "E_FTP_WEIRD_PASV_REPLY", CURLE_FTP_WEIRD_PASV_REPLY);
@@ -746,6 +752,10 @@ initpycurl(void)
     insint_c(d, "E_BAD_FUNCTION_ARGUMENT", CURLE_BAD_FUNCTION_ARGUMENT);
     insint_c(d, "E_INTERFACE_FAILED", CURLE_INTERFACE_FAILED);
     insint_c(d, "E_TOO_MANY_REDIRECTS", CURLE_TOO_MANY_REDIRECTS);
+#ifdef HAVE_CURL_7_21_5
+    insint_c(d, "E_UNKNOWN_OPTION", CURLE_UNKNOWN_OPTION);
+#endif
+    /* same as E_UNKNOWN_OPTION */
     insint_c(d, "E_UNKNOWN_TELNET_OPTION", CURLE_UNKNOWN_TELNET_OPTION);
     insint_c(d, "E_TELNET_OPTION_SYNTAX", CURLE_TELNET_OPTION_SYNTAX);
     insint_c(d, "E_SSL_PEER_CERTIFICATE", CURLE_SSL_PEER_CERTIFICATE);
